# fastapi

./: README.md  aerich.ini  pyproject.toml
app/: db.py  main.py
